# lerobot-playground-portfolio

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  SECRET_ROTATION.md  SECURITY.md  STATUS.md  collect.py  eval.py  pyproject.toml  train.py
.claude/: settings.json
.claude/commands/: ip-check.md  new-policy.md  train-on-kaggle.md
.claude/skills/kaggle-deployment/: SKILL.md
.claude/skills/lerobot-patterns/: SKILL.md
.claude/skills/mujoco-playground/: SKILL.md
.git-hooks/: pre-commit-anti-leak.sh
.github/: dependabot.yml
.github/workflows/: ci.yaml
configs/collect/: default.yaml
configs/dataset/: cube_reach_v1.yaml  multitask.yaml
configs/env/: cube_reach_v1.yaml
configs/eval/: default.yaml
configs/policy/: act.yaml  diffusion.yaml
configs/training/: default.yaml  kaggle.yaml
docs/: AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  IP_STRATEGY.md  ROADMAP.md  SECURITY_AUDIT_2026-06-03.md
docs/adr/: ADR-001-robot-specs-yaml-registry.md  README.md
notebooks/: 01_quickstart.ipynb  02_train_kaggle.ipynb  03_evaluate.ipynb  04_publish_hf.ipynb
robot_specs/: cube_reach_v1.yaml  cube_reach_v2.yaml
src/playground/: __init__.py
src/playground/configs/robot/: cube_reach_v2.yaml
src/playground/data/: __init__.py  pipeline.py
src/playground/envs/: __init__.py  cube_reach_v1.py  cube_reach_v2.py  mujoco_playground_adapter.py  registrations.py  yaml_registrations.py
src/playground/eval/: __init__.py  evaluator.py
src/playground/policies/: __init__.py  act_wrapper.py  diffusion_wrapper.py
src/playground/scripts/: add_robot.py
src/playground/training/: __init__.py  trainer.py
src/playground/utils/: __init__.py  visualizer.py
tests/: __init__.py  conftest.py  test_add_robot.py  test_collect_cli.py  test_env.py  test_eval.py  test_mujoco_playground_adapter.py  test_no_omegaconf_eval_resolver.py  test_pipeline.py  test_policies.py  test_registrations.py  test_train.py  test_train_dataloader.py  test_trainer.py  test_visualizer.py  test_yaml_registrations.py
