# SPDX-FileCopyrightText: 2026 Arthur Mouraud
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/playground"]

[project]
name = "lerobot-playground-portfolio"
version = "0.1.0"
description = "Open-source robotics portfolio: LeRobot + MuJoCo Playground on free-tier GPU"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "Arthur Mouraud", email = "127029130+mefiezvous@users.noreply.github.com" }]
keywords = ["robotics", "lerobot", "mujoco", "reinforcement-learning", "imitation-learning"]
dependencies = [
    "lerobot==0.5.1",
    "mujoco==3.8.0",
    "mujoco-mjx==3.8.0",
    "mujoco-playground",
    "stable-baselines3==2.8.0",
    "hydra-core==1.3.2",
    "mlflow==3.12.0",
    "peft==0.19.1",
    "loguru>=0.7",
    "robotics-platform-template",
    "ml-core",
]

[tool.uv.sources]
robotics-platform-template = { path = "../robotics-platform-template", editable = true }
ml-core = { path = "../ml-core", editable = true }
mujoco-playground = { git = "https://github.com/google-deepmind/mujoco_playground" }

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.9",
    "mypy>=1.10",
    "pre-commit>=3",
    "ipykernel>=6",
    "wandb>=0.16",
    "imageio[ffmpeg]>=2.34",
    "jinja2>=3.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "S", "B"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "mujoco_playground",
    "mujoco_playground.*",
    "lerobot",
    "lerobot.*",
    "stable_baselines3",
    "stable_baselines3.*",
    "mlflow",
    "mlflow.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
markers = [
    "unit: fast unit tests (default)",
    "integration: tests requiring simulation",
    "gpu: tests requiring GPU — skip in CPU-only CI",
]
testpaths = ["tests"]
